# unimock

./: .cargo-rdme.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test_all_stable.sh
.github/workflows/: rust.yml
mocpose_macros/: Cargo.toml
mocpose_macros/src/: lib.rs
src/: as_owned.rs  assemble.rs  build.rs  builders.rs  call_pattern.rs  cell.rs  clause.rs  counter.rs  debug.rs  default_impl_delegator.rs  error.rs  eval.rs  fn_mocker.rs  lib.rs  macro_api.rs  mismatch.rs  mock.rs  mock_impl.rs  output.rs  possess.rs  private.rs  property.rs  respond.rs  responder.rs  state.rs  teardown.rs  unborrow.rs  util.rs  value_chain.rs  verify.rs
src/mock/: core.rs  embedded_hal_1.rs  futures_0_3.rs  mod.rs  std.rs  tokio_1.rs
src/mock/core/: fmt.rs  mod.rs
src/mock/std/: io.rs  mod.rs
src/output/: lending.rs  mut_lending.rs  owning.rs  static_ref.rs
src/output/deep/: mod.rs  option.rs  poll.rs  result.rs  tuples.rs  vec.rs
src/output/shallow/: mod.rs  option.rs  result.rs  vec.rs
tests/: test_associated_future.rs  test_basic.rs  test_errors.rs  test_fn.rs  test_generic.rs  test_generics.rs  test_mock_order.rs  test_next.rs  test_prefix.rs  test_simple.rs  test_unmock.rs
tests/it/: arg_borrows.rs  assoc_types.rs  async_fn.rs  basic.rs  core.rs  default_impl.rs  errors.rs  generic.rs  main.rs  matching_eq.rs  matching_pat.rs  mismatches.rs  mixed.rs  mock_order.rs  new.rs  prefix.rs  pretty_mismatches.rs  std.rs  test_debug.rs  test_fragile.rs  test_mock_embedded_hal.rs  test_mock_tokio.rs  unmock.rs
tests/nightly/: associated_future.rs  async_fn_in_trait.rs  main.rs  rpit_future.rs
unimock/: Cargo.toml  README.md
unimock/src/: error.rs  eval.rs  lib.rs
unimock/tests/: test_associated_future.rs  test_errors.rs  test_gat_future.rs  test_mock_order.rs  test_unmock.rs
unimock_macros/: Cargo.toml  README.md
unimock_macros/src/: doc.rs  lib.rs  matching.rs  unimock.rs
unimock_macros/src/matching/: mod.rs  parse.rs
unimock_macros/src/unimock/: answer_fn.rs  associated_future.rs  attr.rs  method.rs  mod.rs  output.rs  parsed_trait.rs  trait_info.rs  util.rs
