[package]
name = "unimock"
version = "0.5.1"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
rust-version = "1.65"
license = "MIT"
description = "A versatile and developer-friendly trait mocking library"
repository = "https://github.com/audunhalland/unimock/"
keywords = ["mocking", "mock", "testing", "test"]
categories = ["development-tools", "development-tools::testing", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "pretty-print"]
pretty-print = ["dep:pretty_assertions"]
std = []
spin-lock = ["dep:spin"]
mock-core = []
mock-std = ["std", "mock-core"]
nightly-tests = []
unstable-doc-cfg = []

[dependencies]
unimock_macros = { path = "unimock_macros", version = "0.5.1" }
once_cell = "1.17"
pretty_assertions = { version = "1.3", optional = true }
spin = { version = "0.9.8", optional = true }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

[lib]
# do not run doctest by default with `cargo hack`. They are tested with a separate `cargo test --doc` run.
doctest = false

[package.metadata.docs.rs]
features = ["unstable-doc-cfg", "mock-core", "mock-std"]

[workspace]
members = ["unimock_macros"]
