[package]
name = "unimock"
version = "0.6.7"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "A versatile and developer-friendly trait mocking library"
repository = "https://github.com/audunhalland/unimock/"
keywords = ["mocking", "mock", "testing", "test"]
categories = ["development-tools", "development-tools::testing", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "pretty-print"]
std = ["once_cell/std"]
pretty-print = ["dep:pretty_assertions"]
fragile = ["std", "dep:fragile"]
spin-lock = ["dep:spin"]
critical-section = ["once_cell/critical-section"]
mock-core = []
mock-std = ["std", "mock-core"]
mock-futures-io-0-3 = ["std", "dep:futures-io-0-3"]
mock-tokio-1 = ["std", "dep:tokio-1"]
mock-embedded-hal-1 = ["dep:embedded-hal-1", "mock-core"]
nightly-tests = []
unstable-doc-cfg = []

[dependencies]
unimock_macros = { path = "unimock_macros", version = "0.6.7" }
once_cell = { version = "1.19.0", default-features = false }
polonius-the-crab = "0.4.1"
pretty_assertions = { version = "1.4.0", optional = true }
fragile = { version = "2.0.0", optional = true }
spin = { version = "0.9.8", optional = true }
futures-io-0-3 = { package = "futures-io", version = "0.3.30", optional = true }
tokio-1 = { package = "tokio", version = "1.36", default-features = false, optional = true }
embedded-hal-1 = { package = "embedded-hal", version = "1.0.0", optional = true }

[dev-dependencies]
async-trait = "0.1"
critical-section = { version = "1.1.2", features = ["std"] }
tokio-1 = { package = "tokio", version = "1.36", features = ["full"] }
rustversion = "1"

[lib]
# do not run doctest by default with `cargo hack`. They are tested with a separate `cargo test --doc` run.
doctest = false

[package.metadata.docs.rs]
features = [
    "unstable-doc-cfg",
    "fragile",
    "mock-core",
    "mock-std",
    "mock-futures-io-0-3",
    "mock-tokio-1",
    "mock-embedded-hal-1",
]

[workspace]
members = ["unimock_macros"]
