[package]
name = "unimock"
version = "0.3.4"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
license = "MIT"
description = "Unimock type for working with multiple trait bounds"
repository = "https://github.com/audunhalland/unimock/"
keywords = ["test", "mock"]
categories = ["development-tools", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nightly-tests = []

[dependencies]
unimock_macros = { path = "../unimock_macros", version = "0.3.2" }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
