[package]
name = "unimock_macros"
version = "0.3.0"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
license = "MIT"
description = "Procedural macros used by unimock"
repository = "https://github.com/audunhalland/mocpose/"
keywords = []

[dependencies]
syn = { version = "1.0.75", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
mockall = "0.11"

[lib]
proc-macro = true
