[package]
name = "unimock_macros"
version = "0.4.0"
authors = ["Audun Halland <audun.halland@pm.me>"]
edition = "2021"
license = "MIT"
description = "Procedural macros used by unimock"
repository = "https://github.com/audunhalland/unimock/"
keywords = ["procedural-macro", "macros"]

[dependencies]
syn = { version = "1.0.75", features = ["full", "visit-mut"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
